--- a/about.html
+++ b/about.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About </title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    About us
+<body >
     
+    <nav class="w-full flex bg-white items-center border-b-2 shadow-sm ">
+
+        <div class=" w-1/3 flex items-center justify-center font-bold">
+            KITS NSS
+        </div>
+
+
+        <div class=" w-2/3 flex justify-evenly items-center">
+
+            <div class="p-3 font-semibold hover:bg-blue-200 rounded">
+
+                <a href="./index.html"> HOME</a>
+            </div>
+
+            <div class=" font-semibold p-3 hover:bg-blue-200 rounded">
+
+                <a href="./events.html"> EVENTS</a>
+
+            </div>
+
+            <div class=" font-semibold p-3 hover:bg-blue-200 rounded">
+                <a href="./gallery.html">GALLERY</a>
+            </div>
+            <div class=" font-semibold p-3 hover:bg-blue-200 rounded">
+
+                <a href="./about.html"> ABOUT Us</a>
+
+            </div>
+
+
+        </div>
+    </nav>
+
+
+ <main class="h-screen">
+
+ </main>
+    <footer class="bg-gray-100  flex justify-center items-center"> 
+
+    Made with  <span class="text-red-900 mx-1">&hearts;</span> 
+    </footer>
 </body>
 </html>
