--- a/events.html
+++ b/events.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KITS NSS</title>
+    <title>EVENTS</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body>
-
-
+<body >
+    
     <nav class="w-full flex bg-white items-center border-b-2 shadow-sm ">
 
         <div class=" w-1/3 flex items-center justify-center font-bold">
@@ -44,33 +41,11 @@
         </div>
     </nav>
 
-    <main class="h-screen flex  bg-gradient-to-tr from-blue-100 via-orange-100 to-stone-100">
+ 
+    <main class="h-screen"></main>
+    <footer class="bg-gray-100  flex justify-center items-center"> 
 
-
-        <div class="flex justify-center items-center w-1/2 h-full">
-
-
-            <div>
-                <p class="text-3xl">NSS -KITS GUNTUR </p>
-                <p class="text-gray-700">
-                    we the student of kits kfjdklfajlk lajfkjdfjlk justify-center
-
-                </p>
-            </div>
-        </div>
-
-        <div class="flex items-center justify-center  w-1/2 h-full ">
-
-            <div class="bg-pink-700 w-1/2 h-1/2 rounded-full"> </div>
-        </div>
-    </main>
-
-
-
-    <footer class="bg-gray-100  flex justify-center items-center">
-
-        Made with <span class="text-red-900 mx-1">&hearts;</span>
+    Made with  <span class="text-red-900 mx-1">&hearts;</span> 
     </footer>
 </body>
-
 </html>
