--- a/about.html
+++ b/about.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About </title>
-    <scr    <nav class="w-full flex  flex-wrap justify-between  shadow items-center  ">
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body >
+    
+       
+
+    <nav class="w-full flex  flex-wrap justify-between  shadow items-center  ">
 
         <div class="flex items-center justify-center pl-5" >
 
